regard de femme edited

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <img src="images/logo regard de femme.jpg" alt="logo" id="logo">
-      <a class="navbar-brand" href="/">REGARD DE FEMME</a>
+      <a class="navbar-brand" href="/"> REGARD DE FEMME</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/>">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Services</a>
