regard de femme edited paragraph

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
           <img class="title-img" src="images/fem2.jpg" alt="femme">
         </div>
         <div class="col-sm">
-          <h3>Coupe et brushing : pour un look qui convient à votre mode de vie</h3>
-          <p>
+          <h3 id="detatils">Coupe et brushing : pour un look qui convient à votre mode de vie</h3>
+          <p id="detatils">
             Aucune improvisation permise quand vient le temps de couper 
             votre chevelure, que l’on sait précieuse! Toujours minutieuse, 
             notre équipe travaille votre coupe en tenant compte de la 
