--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/>">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="#service-section">Services</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -69,7 +69,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="#about-us">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -116,7 +116,7 @@
     <p>Find the love of your dog's life or your money back.</p> -->
     <div id="top-services" class="container-fluid">
       <h2 class="title-services">
-        <a href="#">Services</a>
+        <a href="#" id="service-section">Services</a>
       </h2>
       <div class="row">
         <div class="col-sm">
@@ -216,6 +216,7 @@
   <!-- Footer -->
 
   <footer id="footer">
+    <h1 id="about-us">Contact Us</h1>
     <div class="container">
       <div class="row">
         <div class="col-sm">
