regard de femme adding link and setting footer

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         </div>
       </div>
     </div>
-    <p class="copy">© Copyright 2021 doing by 💓 GlobalTech.SA</p>
+    <p class="copy">© Copyright 2021 doing by 💓 with team GlobalTech.SA</p>
 
 
   </footer>
